k8s/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: task-mgmt-db
  namespace: task-mgmt-ns
spec:
  serviceName: "task-mgmt-db-svc"
  replicas: 1
  selector:
    matchLabels:
      app: task-mgmt-db
  template:
    metadata:
      labels:
        app: task-mgmt-db
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: mssql-data
              mountPath: /var/opt/mssql
  volumeClaimTemplates:
    - metadata:
        name: mssql-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
