k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-mgmt-backend-svc
  namespace: task-mgmt-ns
spec:
  selector:
    app: task-mgmt-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
