k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-mgmt-db-svc
  namespace: task-mgmt-ns
spec:
  ports:
    - port: 1433
      targetPort: 1433
  selector:
    app: task-mgmt-db
  clusterIP: None # For StatefulSet (headless)
